# vibe-sync

./: .gitignore  ANTIGRAVITY.md  CHANGELOG.md  CLAUDE.md  Dockerfile  GEMINI.md  HOW_IT_WORKS.md  PITCH.md  README.md  SESSION_HISTORY.md  ai_bridge.py  cloud.py  config.py  demo.html  deploy.py  help.txt  hooks.py  log.txt  main.py  mcp_config_snippet.json  models.py  pyproject.toml  requirements.txt  server.py  tmp_test.py  vibe_core.py
.agent/rules/: 00-context-first.md
.github/workflows/: ci.yml
src/vibe_sync/: __init__.py  trimmer.py
src/vibe_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_auth.py  test_gcs.py  test_mcp.py  test_operations.py  test_server_tools.py  test_vibe_core.py
vibe_sync/: __init__.py  auth.py  cli.py  gcs.py  mcp_server.py  operations.py
vibe_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
